--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="button_3">Button 3</string>
     <string name="see_all_logs">SEE ALL LOGS</string>
     <string name="delete_logs">Delete Logs</string>
+    <string name="title_logviewer">Log Viewer</string>
+    <string name="title_contentprovider">ContentProvider</string>
 </resources>
